t - added json tests

--- a/java/kata/build.gradle
+++ b/java/kata/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
 
+    testRuntimeOnly("com.google.code.gson:gson:2.9.0")
     testImplementation(platform("org.junit:junit-bom:5.8.2"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testImplementation("org.assertj:assertj-core:3.22.0")
