--- a/java/kata/build.gradle
+++ b/java/kata/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     testImplementation(platform("org.junit:junit-bom:5.8.2"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testImplementation("org.assertj:assertj-core:3.22.0")
-    testImplementation("com.approvaltests:approvaltests:15.1.2")
+    implementation("com.approvaltests:approvaltests:15.1.2")
     testImplementation("org.mockito:mockito-core:4.4.0")
     testImplementation("org.mockito:mockito-junit-jupiter:4.4.0")
 }
