--- a/java/kata/build.gradle
+++ b/java/kata/build.gradle
@@ -1,3 +1,5 @@
+targetCompatibility = JavaVersion.VERSION_16_PREVIEW
+sourceCompatibility = JavaVersion.VERSION_16_PREVIEW
 plugins {
     id 'java'
     id 'jacoco'
